# atualização de imagens

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 #################
-## Images
+## Outro domínio
 #################
-/images
+styleGeral.css
+lucasanimador/
 
 #################
 ## Eclipse
