--- a/.htaccess
+++ b/.htaccess
@@ -8,7 +8,7 @@ FileETag None
  ExpiresDefault "access plus 1 month"
  ExpiresByType text/cache-manifest "access plus 0 seconds"
  # Html
- ExpiresByType text/html "access plus 1 month"
+ ExpiresByType text/html "access plus 0 seconds"
  # Media: images, video, audio
  ExpiresByType image/gif "access plus 1 month"
  ExpiresByType image/png "access plus 1 month"
