--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,13 @@ style.css
 lucasanimador/
 
 #################
+## Geral
+#################
+min/
+index_.html
+world.jpg
+
+#################
 ## Eclipse
 #################
 
